tests/bad/testReassignTypeMismatchI2S.grc
// Error: Type mismatch assigning int to string
s := "hello"
s = 123 // Error: Cannot assign value of type int to variable 's' (type string)

i_val := 456
s = i_val // Error: Cannot assign value of type int to variable 's' (type string) 